--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,8 @@ server {
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+        auth_basic "DevEire Login";
+        auth_basic_user_file  /etc/nginx/htpasswd-deveire;
         proxy_pass http://127.0.0.1:8080/;
     }
 }
